// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appVersion fetchAppVersionEvents can't fetch app version events 1`] = `
Array [
  Object {
    "type": "TEST_DEVICES_GET_NEXT",
  },
  Object {
    "payload": "api had some issue",
    "type": "TEST_DEVICES_GET_ERROR",
  },
]
`;

exports[`appVersion fetchAppVersionEvents can't fetch test devices 1`] = `
Array [
  Object {
    "type": "TEST_DEVICES_GET_NEXT",
  },
  Object {
    "error": true,
    "payload": [Error: Token not set],
    "type": "TEST_DEVICES_GET_ERROR",
  },
]
`;

exports[`appVersion fetchAppVersionEvents fetches app version events 1`] = `
Array [
  Object {
    "type": "TEST_DEVICES_GET_NEXT",
  },
  Object {
    "type": "TEST_DEVICES_GET_COMPLETE",
  },
]
`;

exports[`appVersion fetchAppVersionEvents fetches test devices 1`] = `
Array [
  Object {
    "type": "TEST_DEVICES_GET_NEXT",
  },
  Object {
    "error": true,
    "payload": [Error: Token not set],
    "type": "TEST_DEVICES_GET_ERROR",
  },
]
`;

exports[`appVersion reducer loads app version events 1`] = `
Array [
  Object {
    "createdAt": 2018-09-20T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "finished",
    "text": "Event finished successfully!",
    "updatedAt": 2018-09-21T12:42:31.000Z,
  },
  Object {
    "createdAt": 2018-09-22T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "in-progress",
    "text": "Doing something...",
    "updatedAt": 2018-09-25T12:42:31.000Z,
  },
  Object {
    "createdAt": 2018-09-26T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "failed",
    "text": "An error occured.",
    "updatedAt": 2018-09-27T12:42:31.000Z,
  },
]
`;

exports[`appVersion reducer loads devices 1`] = `
Array [
  Object {
    "createdAt": 2018-09-20T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "finished",
    "text": "Event finished successfully!",
    "updatedAt": 2018-09-21T12:42:31.000Z,
  },
  Object {
    "createdAt": 2018-09-22T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "in-progress",
    "text": "Doing something...",
    "updatedAt": 2018-09-25T12:42:31.000Z,
  },
  Object {
    "createdAt": 2018-09-26T12:42:31.000Z,
    "id": "1234",
    "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
    "status": "failed",
    "text": "An error occured.",
    "updatedAt": 2018-09-27T12:42:31.000Z,
  },
]
`;
